5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1671_1102.log
== TEST (2019-04-28 22:17:47) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de compustivel: "))
r = float(input("raio dos bojos semiesfericos: "))
print("Entradas: ", H, h, r)

v = (4/3)*pi*(r**3)
v2= (pi*(x** 2)*(3*r-x))/3#ar

if (H>0)and(h>0)and(r>0): 
	if(:
	print(round(v2,4))
else:
	x=v-v2
	print(round(x,4))
-- ERROR:
File "XXXX", line 17
    if(:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:38:40) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de compustivel: "))
r = float(input("raio dos bojos semiesfericos: "))
print("Entradas: ", H, h, r)

v = (4/3)*pi*(r**3) #esfera
v2= (pi*(h** 2)*(3*r-h))/3 #ar

if (H>0)and(h>0)and(r>0): 
	if(H>h)and(h>2*r):
elif(h<v2):
	vl = v2*1000
	print("Volume: ", round(h,3) ,"litros")
-- ERROR:
File "XXXX", line 18
    elif(h<v2):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:40:09) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

H = float(input("altura do tanque: "))
h = float(input("nivel de compustivel: "))
r = float(input("raio dos bojos semiesfericos: "))
print("Entradas: ", H, h, r)

v = (4/3)*pi*(r**3) #esfera
v2= (pi*(h** 2)*(3*r-h))/3 #ar

if (H>0)and(h>0)and(r>0): 
	if(H>h)and(h>2*r):
	elif(h<v2):
		vl = v2*1000
		print("Volume: ", round(h,3) ,"litros")
-- ERROR:
File "XXXX", line 18
    elif(h<v2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
